--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,7 @@
   "description": "Add \"Show Windows\" and \"Kill Current\" buttons to the homebar.",
   "manifest_version": 2,
   "version": "2.0",
-  "author": "The real Michael Henretty",
-  "developer": {
+  "author": {
     "name": "Michael Henretty",
     "url": "https://github.com/mikehenrty"
   },
