--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "description": "Add \"Show Windows\" and \"Kill Current\" buttons to the homebar.",
   "manifest_version": 2,
   "version": "2.0",
+  "author": "Michael Henretty",
   "content_scripts": [{
     "matches": "*://system.gaiamobile.org/*",
     "css": [],
