--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "2.0",
   "author": "Michael Henretty",
   "content_scripts": [{
-    "matches": "*://system.gaiamobile.org/*",
+    "matches": ["*://system.gaiamobile.org/*"]
     "css": [],
     "js": ["shb-plus.js"]
   }],
